Open some chronicle required modules